web/gallery.css
html {
    background: #000;
}

body {
  font-family: luxi sans, trebuchet ms, sans-serif;
  color: #888;
  background: #000;
  overflow-y: scroll;
  font-size: 14px;
}

.clearfix:before, .clearfix:after {
  content: " ";
  display: table;
}

.clearfix:after {
  clear: both;
}

a {
    text-decoration: none;
}

.header {
  position: fixed;
  z-index: 10;
  top: 0;
  width: 100%;
  padding: 8px 10px;
  color: white;
  text-shadow: 1px 0 black;
  background: #313131;
  text-align: center;
  opacity: 0.9;
  filter: alpha(opacity=90);
  margin-left: -20px;
  border-bottom: 1px solid black;
}

h1 {
    font-size: 150%;
}

h2 {
    font-size: 115%;
}

.header h1 {
  position: absolute;
  margin-top: 4px;
  left: 0;
  right: 0;
  text-align: center;
  color: white;
  font-size: 140%;
  font-weight: bold;
}

.header h1 small {
    font-weight: normal;
    font-size: 80%;
}

.header .button {
    padding: 5px 10px;
    margin: 0 10px;
    float: left;
    z-index: 10;
}

.header .button.first, .header .button:first-child {
    margin-left: 45px;
}

.header > span {
    padding: 6px 0;
}

.header .button.right {
    float: right;
}

.header input {
    font-size: 120%;
    padding: 3px 20px 3px 6px;
    border: none;
    border-radius: 4px;
    box-shadow: inset 0 1px 1px rgba(0,0,0,0.6);
    z-index: 9;
}

.header #search input {
    position: absolute;
    right: 0;
    margin: 0 45px 0 20px;
    width: 9%;
    background: white url(/img/search-icon.png) right 3px no-repeat;
    transition: 0.3s;
}

.header #search input:focus {
    outline: none;
    width: 15%;
    transition: 0.3s;
}

.header .button:active {
    margin-top: 1px;
    margin-bottom: -1px;
}

.header .button img {
    position: relative;
    height: 16px;
    width: 16px;
    margin: -2px 3px -3px 0;
}

#content {
    display: none; /* will fade in */
    width: 100%;
    margin: 60px auto;
}

.left {
    float: left;
}

.clear {
    clear: both;
}

.hidden {
    display: none;
}

#content h1 {
    color: white;
    font-size: 170%;
}

#content h2 {
    margin-top: 4px;
}

.albums a, .thumbs a {
    float: left;
    margin: 0 10px 10px 0;
    position: relative;
}

.albums a img, .thumbs a img {
    border: 3px solid #313131;
}

.albums a img {
    width: 212px;
    height: 212px;
}

.thumbs a img {
    width: 144px;
    height: 144px;
    text-align: center;
}

.albums a:hover img, .thumbs a:hover img {
    border-color: #616161;
}

.thumbs a .description {
    display: none;
}

.albums a .title {
    position: absolute;
    bottom: 3px;
    left: 3px;
    right: 3px;
    height: 50px;
    background: rgba(0,0,0,0.5);
    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.9) 100%);
    color: white;
    text-shadow: 1px 1px black;
}

.albums a .title > .text {
    position: absolute;
    left: 5px;
    right: 5px;
    bottom: 8px;
}

.albums a .title > .info {
    position: absolute;
    right: 5px;
    bottom: 7px;
    color: gray;
    display: none;
}

.albums a .title > .description {
    display: none; /* this is for search engines */
}

.facebook-button {
    width: 90px;
    height: 20px;
}

#content .facebook-button {
    overflow: hidden;
    position: absolute;
    top: 60px;
    right: 31px
}

#photo-wrapper #facebook-button {
    top: 10px;
    right: 10px
}

#map {
    float: right;
    width: 440px;
    height: 444px;
    margin: 0 10px 10px 0;
    border: 3px solid #313131;
}

#photo-wrapper {
    display: none;
    background: black;
    background: rgba(0,0,0,0.9);
    position: absolute;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 666;
}

#photo-wrapper img.photo {
    position: absolute;
    border: 2px solid #313131;
}

#photo-wrapper .title-wrapper {
    position: absolute;
    left: 50%;
    bottom: 20px;
}

#photo-wrapper .title-wrapper .title {
    position: relative;
    left: -50%;
    z-index: 777;
    text-align: center;
    padding: 5px 10px;
    border-radius: 5px;
    color: white;
    text-shadow: 1px 1px 1px black;
    background: rgba(0,0,0,0.3)
}

#photo-exif {
    position: absolute;
    top: 5px;
    left: 5px;
    color: #555;
    text-shadow: 1px 1px 1px black;
}

#photo-exif td {
    padding: 2px;
}

#photo-comments {
    position: absolute;
    bottom: -5px;
    left: 0;
    padding: 10px;
    border-radius: 5px;
    transition: 0.3s;
}

#photo-comments:hover {
    z-index: 1000;
    color: white;
    background: black;
    background: rgba(0,0,0,0.3);
    transition: 0.3s;
}

#photo-comments .comment {
    margin-bottom: 10px;
    text-shadow: 1px 1px 1px black;
    clear: both;
}

#photo-comments .comment img {
    float: left;
    height: 48px;
    margin-right: 7px;
    margin-bottom: 7px;
    border-radius: 5px;
    opacity: 0.4;
    transition: 0.3s;
}

#photo-comments:hover img {
    opacity: 1;
    transition: 0.3s;
}

#photo-comments .comment a {
    font-style: italic;
    color: inherit;
    margin-bottom: 5px;
}

#photo-map {
    position:absolute;
    width: 140px;
    height: 140px;
    right: 0;
    bottom: 0;
    background: transparent;
    opacity: 0.5;
    transition: 0.3s;
}

#photo-map:hover {
    height: 200px;
    width: 260px;
    z-index: 1000;
    opacity: 1;
    transition: 0.3s;
    border: 2px solid #666;
}

#footer {
    clear: both;
    padding-top: 20px;
    text-align: center;
    color: #666;
}

#footer a {
    color: #aaa;
}

#photo-controls {
    position: relative;
    top: -50px;
    width: 100%;
    z-index: 1000;
    cursor: auto;
    padding-bottom: 50px;
    transition: top 0.5s;
}

#photo-controls .header {
    position: relative;
}

#photo-controls:hover, #photo-controls.visible {
    top: 0;
    transition: top 0.5s;
}

#photo-controls .facebook-button {
    float: right;
}

#photo-controls h1 {
    position: relative;
    left: -130px;
    z-index: -1;
}

.button {
    position: relative;
    display: inline-block;
    text-align: center;
    cursor: pointer;
    border: 1px solid #666;
    background-color: #666;
    background-color: rgba(128, 128, 128, 0.75);
    border-radius: 4px;
    color: #fff;
    font-weight: bold;
    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
    box-shadow: rgba(0, 0, 0, 0.3) 0 1px 1px;
}
.button:hover {
  background-color: rgba(128, 128, 128, 0.9);
}
.button:active {
    box-shadow: none;
}

@media screen and (max-width: 900px) {
  #photo-controls h1 {
    position: static;
    float: left;
  }

  #photo-controls #photo-controls-title {
    display: none;
  }

  #photo-controls h1 small {
    margin-left: 20px;
  }

  #photo-controls #time-remaining {
    font-size: 10px;
    line-height: 16px;
  }

  .header .button.first, .header .button:first-child {
    margin-left: 20px;
  }
}

/* only desktop */
@media screen and (min-device-width: 1024px) {
    .albums a:hover .title > .info {
        display: block;
    }
}

/* only mobile */
@media screen and (max-device-width: 569px) {
    body {
        font-size: 20px;
    }

    .header .button:first-child, .header .button.first {
        margin-left: 30px;
    }

    .header #search input {
        margin-right: 10px;
        width: 100px;
    }

    #photo-map, #photo-exif, #photo-comments {
        display: none !important;
    }

    #footer {
        font-size: 14px;
    }

    #photo-wrapper img.photo {
        border: none;
    }

    #photo-wrapper .title {
        font-size: 12px;
    }
}

